# aquasec-cli

./: .gitignore  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: snyk-security.yml
aquasec_cli/: __init__.py  _version.py  main.py  utils.py
aquasec_cli/commands/: api.py  report.py
