[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "attrs"]

[project]
name = "aquasec-cli"
authors = [
    {name = "atav928", email = "dev@tavnets.com"},
]
description = "Aqua Security cli"
requires-python = ">=3.8"
keywords = ['aquasec', 'aqua security', 'workload protection']
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aquasec-api==0.0.3",
    "click>=8.1.3",
    "dataclasses>=0.6",
    "PyYAML>=6.0",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version", "readme", "entry-points"]


[project.scripts]
aquasec-cli = "aquasec_cli.main:cli"

[project.urls]
repository = "https://github.com/atav928/aquasec-cli"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "SECURITY.md"], content-type = "text/markdown"}
version = {attr = "aquasec_cli.__version__"}

[tools.setuptools.packages]
find = {}
