[metadata]
name = aquasec-cli
version = attr: aquasec_cli.__version__
author = atav928
description = Aqua Security cli
author_email = dev@tavnets.com
keywords = aquasec, aqua security, workload protection
long_description = file: README.md, LICENSE, SECURITY.md
license = GNU

[options]
python_requires = >3.8, <4
include_package_data = True
packages = find:
install_requires =
    aquasec-api == 0.0.2
    click >= 8.1.3
    dataclasses >= 0.6
    PyYAML >= 6.0
zip_safe = True

[options.package_data]
* = *.txt, *.md

[options.entry_points]
console_scripts =
    aquasec-cli=aquasec_cli.main:cli