[metadata]
name = aquasec-cli
version = attr: aquasec_cli.__version__
author = atav928
description = Aqua Security cli
author_email = dev@tavnets.com
keywords = aquasec, aqua security, workload protection
long_description = file: README.md, SECURITY.md, LICENSE
long_description_content_type = text/markdown
license = GNU

[options]
python_requires = >3.8, <4
include_package_data = True
packages = find:
install_requires =
    aquasec-api == 0.0.3
    click >= 8.1.3
    dataclasses >= 0.6
    PyYAML >= 6.0
zip_safe = True

[options.packages.find]
include = aquasec_cli*

[options.package_data]
* = *.txt, *.md, *.rst

[options.entry_points]
console_scripts =
    aquasec-cli=aquasec_cli.main:cli